--- a/cloud-consumer-order_80/src/main/resources/application.yaml
+++ b/cloud-consumer-order_80/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 800
 
 spring:
   application:
@@ -14,3 +14,6 @@ eureka:
     service-url:
       # defaultZone: http://localhost:7001/eureka
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  # 集群版
+  instance:
+    prefer-ip-address: true
+    instance-id: consumer80
