--- a/cloud-consumer-feign_801/src/main/resources/application.yaml
+++ b/cloud-consumer-feign_801/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 800
+  port: 801
 
 spring:
   application:
@@ -8,7 +8,7 @@ spring:
 eureka:
   client:
     #表示是否将自己注册进EurekaServer默认为true。
-    register-with-eureka: true
+    register-with-eureka: false
     #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetchRegistry: true
     service-url:
@@ -16,4 +16,8 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  # 集群版
   instance:
     prefer-ip-address: true
-    instance-id: consumer800
+    instance-id: consumer801
+logging:
+  level:
+    com.atguigu.springcloud.service.PaymentFeignService: debug
+
