--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cloud-eureka-server_7001</module>
         <module>cloud-eureka-server_7002</module>
         <module>cloud-provider-payment_8002</module>
+        <module>cloud-consumer-feign_801</module>
     </modules>
 
     <!-- 统一Jar包版本管理-->
