--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cloud-eureka-server_7002</module>
         <module>cloud-provider-payment_8002</module>
         <module>cloud-consumer-feign_801</module>
+        <module>cloud-provider-hystrix-payment_8001</module>
     </modules>
 
     <!-- 统一Jar包版本管理-->
