--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <module>cloud-provider-payment_8002</module>
         <module>cloud-consumer-feign_801</module>
         <module>cloud-provider-hystrix-payment_8001</module>
+        <module>cloud-consumer-feign-hystrix-order_802</module>
+        <module>cloud-consumer-hystrix-dashboard_9001</module>
+        <module>cloud-gateway-gateway_9527</module>
+        <module>cloud-config-center_3344</module>
+        <module>cloud-config-client_3355</module>
     </modules>
 
     <!-- 统一Jar包版本管理-->
