--- a/cloud-config-center_3344/src/main/resources/application.yaml
+++ b/cloud-config-center_3344/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name:  cloud-config-center #注册进Eureka服务器的微服务名
+    name: cloud-config-center #注册进Eureka服务器的微服务名
   cloud:
     config:
       server:
@@ -16,6 +16,11 @@ spring:
           password: mxyQ4kwwF.Z6.hE
       ####读取分支
       label: master
+rabbitmq:
+  host: localhost
+  port: 5672
+  username: guest
+  password: guest
 
 #服务注册到eureka地址
 eureka:
@@ -23,3 +28,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:7001/eureka
 
+##rabbitmq相关配置,暴露bus刷新配置的端点
+management:
+  endpoints: #暴露bus刷新配置的端点
+    web:
+      exposure:
+        include: 'bus-refresh'
