--- a/cloud-provider-payment_8001/src/main/resources/application.yaml
+++ b/cloud-provider-payment_8001/src/main/resources/application.yaml
@@ -10,6 +10,11 @@ spring:
     url: jdbc:mysql://localhost:3306/springclouddb?serverTimezone=UTC
     username: root
     password: 123456
+  zipkin:
+      base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 
 
 mybatis:
