--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <module>cloudalibaba-provider-payment9004</module>
         <module>cloudalibaba-consumer-nacos-order84</module>
         <module>untitledseata-order-service2001</module>
+        <module>untitledseata-storage-service2002</module>
+        <module>seata-account-service2003</module>
     </modules>
 
     <!-- 统一Jar包版本管理-->
