--- a/seata-account-service2003/src/main/resources/application.yaml
+++ b/seata-account-service2003/src/main/resources/application.yaml
@@ -1,20 +1,19 @@
 server:
-  port: 2001
+  port: 2003
 
 spring:
   application:
-    name: seata-order-service
+    name: seata-account-service
   cloud:
     alibaba:
       seata:
-        #自定义事务组名称需要与seata-server中的对应
         tx-service-group: my_test_tx_group
     nacos:
       discovery:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_order?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/seata_account?serverTimezone=UTC
     username: root
     password: 123456
 
@@ -29,6 +28,4 @@ logging:
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.atguigu.springcloud.domain
-
 
