--- a/untitledseata-storage-service2002/src/main/resources/application.yaml
+++ b/untitledseata-storage-service2002/src/main/resources/application.yaml
@@ -1,26 +1,21 @@
 server:
-  port: 2001
+  port: 2002
 
 spring:
   application:
-    name: seata-order-service
+    name: seata-storage-service
   cloud:
     alibaba:
       seata:
-        #自定义事务组名称需要与seata-server中的对应
         tx-service-group: my_test_tx_group
     nacos:
       discovery:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_order?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/seata_storage?serverTimezone=UTC
     username: root
     password: 123456
-
-feign:
-  hystrix:
-    enabled: false
 
 logging:
   level:
@@ -29,6 +24,5 @@ logging:
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.atguigu.springcloud.domain
 
 
